sketches/final/style.css
/* ... */
#labels .b{
    font-weight: bold;
}
#rollover rect {
    fill: #eee;
}
#rollover text {
    fill: black;
}
#nav {
    height: 490px;
    width: 3%;
    position: absolute;
    left: 0;
    top: 0px;
}
#nav-context {
    height: 510px;
    width: 3%;
    position: absolute;
    left: 3%;
    top: 0px;
}
#graph-wrapper #graph-reset,
#graph-wrapper.child #nav-context text {
    display: none;
}
#graph-wrapper.child #graph-reset {
    display: inline-block;
    position: absolute;
    top: 0px;
    left: 0px;
    padding: 2px;
}
.schema rect {
    stroke: white;
    cursor: pointer;
}
.schema.selected rect {
    stroke: black;
}

#graph {
    position: absolute;
	left: 4%;
}
	
#graph-subjects {
    height: 500px;
    width: 100%;
    position: absolute;
    z-index: 0;
    left: 130px;
    top: 5px;
}

#histogram {
    width: 97%;
    position: absolute;
    top: 510px;
    margin-bottom: 16px;
    padding: 0 40px 0 6%;
    box-sizing: border-box;
    -moz-box-sizing: border-box;
    height: 80px;
}
#histogram text {
    font-size: 10px;
    text-anchor: middle;
}

#graph-reset {
    border: 1px solid #808080;
    color: #808080;
    cursor: pointer;
    padding: 3px 6px;
    text-transform: uppercase;
    font-size: 12px;
    position: absolute;
    margin-top: 400px;
    margin-left: -140px;
}

#histogram .reset {
    left: 70px;
}
#histogram .reset:hover,
#graph-reset:hover {
    border-color: #000;
    color: #000;
}
#histogram .axis-label {
    text-align: center;
    margin-top: 15px;
}
.axis-label.vertical {
    position: absolute;
    top: 250px;
    text-align: center;
    transform: rotate(-90deg);
    -webkit-transform: rotate(-90deg);
    -moz-transform: rotate(-90deg);
    -ms-transform: rotate(-90deg);
    left: -55px;
}
#slider-range {
    border: 1px solid #808080;
    height: 10px;
    box-sizing: border-box;
    -moz-box-sizing: border-box;
}
.ui-slider-range {
    background-color: #f7f7f7;
}
.ui-slider-horizontal .ui-slider-handle {
    width: 36px;
    height: 16px;
    line-height: 16px;
    cursor: pointer;
    text-indent: 0px;
    top: -4px;
    background: white;
    border: 1px solid #808080;
    color: #808080;
    font-family: Lucida Grande;
    font-size: 11px;
    text-decoration: none;
    text-align: center;
    margin-left: -24px;
}
.ui-slider-horizontal .ui-slider-handle:hover {
    color: black;
    border-color: black;
}

#histogram rect {
    stroke: #fff;
}
#sort h2 {
    text-transform: uppercase;
    margin: 0;
    font-size: 12px;
    margin-bottom: 2px;
    padding-bottom: 5px;
    font-weight: normal;
    text-decoration: underline;
}
#sort .graph-type {
    float: left;
}
#sort .graph-toggle {
    cursor: pointer;
    margin: 0 0 10px 0;
    display: block;
    width: 100px;
    font-size: 14px;
    line-height: 30px;
    left: 0px;
    color: #A6A6A6;
    font-family: Helvetica, Arial, sans-serif;
}
#sort .graph-toggle:hover {
    color: #808080;
}
#sort .graph-toggle.selected {
    color: #000;
}
#sort .graph-toggle span {
    width: 30px;
    height: 30px;
    display: inline-block;
    margin-right: 5px;
    float: left;
    background-image: url(img/sort-sprite.png);
}
#sort #show-graph span {
    background-position: -30px -60px;
}
#sort #show-graph:hover span {
    background-position: -30px -30px;
}
#sort #show-graph.selected span {
    background-position: -30px 0px;
}
#sort #show-list span {
    background-position: 0 -60px;
}
#sort #show-list:hover span {
    background-position: 0 -30px;
}
#sort #show-list.selected span {
    background-position: 0 0;
}
#sort ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    font-size: 12px;
    width: 50%;
    float: right;
}
#sort li {
    cursor: pointer;
    text-transform: capitalize;
    margin-bottom: 1px;
    color: #A6A6A6;
    font-family: Helvetica, Arial, sans-serif;
}
#sort li:hover {
    color: #808080;
}
#sort li.selected {
    color: black;
}
#sort .disabled {
    cursor: default;
    margin-left: 14px;
    color: #808080;
}
#sort .indent .disc {
    margin-right: 19px;
}
#sort .disc {
    width: 8px;
    height: 8px;
    display: inline-block;
    border-radius: 5px;
    background-color: white;
    margin-right: 5px;
    display: none;
}
#sort li:hover .disc {
    background-color: #ddd;
}
#sort li.selected .disc {
    background: #000;
}
#sort li:first-child{
    cursor: default !important;
    color: black !important;
    text-decoration: underline;
    text-transform: uppercase;
    margin-bottom: 5px;
    font-family: inherit;
}
#sort .list,
.list #sort .graph {
    display: none;
}
.list #sort .list {
    display: block;
}
::-webkit-scrollbar {
    -webkit-appearance: none;
    width: 7px;
    height: 5px;
}
::-webkit-scrollbar-thumb {
    border-radius: 4px;
    background-color: rgba(0,0,0,.5);
    -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
}
#info-wrapper {
    width: 90%;
    position: absolute;
    top: 120px;
    font-size: 16px;
    box-sizing: border-box;
    -moz-box-sizing: border-box;
    height: 400px;
    background: #f7f7f7;
    border: 1px solid #808080;
}
#info-wrapper h3 {
    font-weight: normal;
    margin: 0;
    font-size: 20px;
}
#info-wrapper .info-bar {
    width: 100%;
    height: 15px;
}
#info-wrapper .notch {
    position: absolute;
    top: -1px;
    right: -1px;
    width: 20px;
    height: 0px;
    background-color: white;
    border-bottom: 1px solid #ccc;
    border-left: 1px solid #ccc;
    
}
#info-wrapper .info-title {
    margin-top: 10px;
    color: #808080;
}
#info-wrapper .sort-heading {
    float: left;
    width: 200px;
    text-align: center;
    width: 60%;
}
#info-wrapper .sort-heading p {
    text-transform: uppercase;
    margin: 2px;
    font-size: 14px;
}
#info-wrapper .book-sort {
    cursor: pointer;
    -webkit-user-select: none;
    float: left;
    width: 20%;
 }
 #info-wrapper .book-sort:hover {
    color: #000;
 }
 #info-wrapper .book-sort:hover .tri {
    border-right-color: #000;
 }
/* ... */

